# perceptron-monocapa

./: README.md  pyproject.toml  testing.py
monocapa/binary/: test.py
monocapa/core/: activation.py  perceptron.py
monocapa/core/abs/: analyzer.py  factivation.py
monocapa/core/objects/: analyzer.py  perceptron.py
monocapa/linear/: test.py
monocapa/utils/: enums.py  generator.py  utils.py
monocapa/utils/objects/: generator.py
