[tool.poetry]
name = "monocapa"
version = "0.1.0"
description = ""
authors = ["techatlasdev <srgoqui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.1"
termpyx = "^0.1.0"

[tool.poetry.scripts]
start = "monocapa.main:main"
linear = "monocapa.linear.test:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
